fix(experiment): fixed spacing again

--- a/src/_mobile.scss
+++ b/src/_mobile.scss
@@ -46,7 +46,7 @@
         h1 {
             grid-column: 5/12;
             font-size: 3.7rem;
-            grid-row: 4 / span 3;
+            grid-row: 3 / span 3;
             line-height: 110%;
             font-weight: 500;
         }
@@ -82,7 +82,7 @@
         }
     }
     .section.experiment {
-        grid-row: span 18;
+        grid-row: span 19;
         .titled-paragraph {
             grid-row: span 8;
         }
@@ -93,76 +93,76 @@
         }
         img:nth-of-type(1) {
             grid-column: 1/3;
-            grid-row: 10;
+            grid-row: 11;
         }
         img:nth-of-type(2) {
             grid-column: 3/6;
-            grid-row: 11;
+            grid-row: 12;
         }
         img:nth-of-type(3) {
             grid-column: 1/4;
-            grid-row: 12;
+            grid-row: 13;
             z-index: -1;
         }
         img:nth-of-type(4) {
             grid-column: 4/8;
-            grid-row: 10;
+            grid-row: 11;
             z-index: -1;
         }
         img:nth-of-type(5) {
             grid-column: -7/-3;
-            grid-row: 12;
+            grid-row: 13;
         }
         img:nth-of-type(6) {
             grid-column: 1/2;
-            grid-row: 9;
+            grid-row: 10;
             z-index: -1;
         }
         img:nth-of-type(7) {
             grid-column: -10/-8;
-            grid-row: 13;
+            grid-row: 14;
         }
         img:nth-of-type(8) {
             grid-column: -12/-9;
-            grid-row: 14;
+            grid-row: 15;
             z-index: -1;
         }
         img:nth-of-type(9) {
             grid-column: -8/-4;
-            grid-row: 14;
+            grid-row: 15;
         }
         img:nth-of-type(10) {
             grid-column: -5/-2;
-            grid-row: 11;
+            grid-row: 12;
         }
         img:nth-of-type(11){
             grid-column: -10/-8;
-            grid-row: 16;
+            grid-row: 17;
         }
         img:nth-of-type(12){
             grid-column: -5/-1;
-            grid-row: 16;
+            grid-row: 17;
             z-index: -1;
         }
         img:nth-of-type(13){
             grid-column: -4/-1;
-            grid-row: 13;
+            grid-row: 14;
         }
         img:nth-of-type(14){
             grid-column: -7/-5;
-            grid-row: 9;
+            grid-row: 10;
         }
         img:nth-of-type(15){
             grid-column: -7/-6;
-            grid-row: 17;
+            grid-row: 18;
         }
         img:nth-of-type(16){
             grid-column: -5/-4;
-            grid-row: 10;
+            grid-row: 11;
         }
         img:nth-of-type(17){
             grid-column: -3/-1;
-            grid-row: 10;
+            grid-row: 11;
         }
     }
     .section.who {
